--- a/metadata/metadata.yml
+++ b/metadata/metadata.yml
@@ -1,5 +1,5 @@
 metadata_version: 1
-name: 'Lantern Hackathon Challenge #2 Description & Submission'
+name: 'Copy of Lantern Hackathon Challenge #2 Description & Submission'
 description: 'Capsule containing needed data, submission files, and readme with instructions
   for Lantern-UTD Hackathon Challenge #2.'
 tags:
