Fixing column number last step

--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -1,4 +1,4 @@
-# hash:sha256:fa6653087e17174f9216477971cc5ffd04a31fa0198e73078251c5cd3010b865
-FROM registry.hackathon2023.radr-ai.com/codeocean/tensorflow:2.11-python3.10-cuda11.7.0-runtime-ubuntu22.04
+# hash:sha256:48d7036f869c534c709c3095eb47c8b9d2f6c15c95fd39e0a965089c01e198e3
+FROM registry.hackathon2023.radr-ai.com/codeocean/py-r:python3.10.12-R4.2.3-IRkernel-ubuntu22.04
 
 ARG DEBIAN_FRONTEND=noninteractive
